# vision-guided-uav-autonomous-landing-system

./: .gitignore  LICENSE  README.md
uav-qr-docking/: CMakeLists.txt  README.md  package.xml
uav-qr-docking/include/qr_landing/: algorithm.h  communicator.h  helper.h  image_processor.h  image_reciever.h
uav-qr-docking/src/: algorithm.cpp  communicator.cpp  helper.cpp  image_processor.cpp  image_reciever.cpp  qrlanding_node.cpp
uav-safe-landing/: CMakeLists.txt  README.md  package.xml
uav-safe-landing/include/SafeLanding/: algorithm.h  communicator.h  helper.h  image_processor.h  image_reciever.h
uav-safe-landing/src/: algorithm.cpp  communicator.cpp  helper.cpp  image_processor.cpp  image_reciever.cpp  safelanding_node.cpp
uav-safe-takeoff/: CMakeLists.txt  README.md  package.xml
uav-safe-takeoff/include/safe_takeoff/: algorithm.h  communicator.h  helper.h  image_processor.h
uav-safe-takeoff/src/: algorithm.cpp  communicator.cpp  helper.cpp  image_processor.cpp  safetakeoff_node.cpp
uav-terrain-segmentation/: README.md  math.cpp  terrain_segmentation.cpp  terrain_segmentation.py
